--- a/restaurant/src/main/resources/templates/goods/add.html
+++ b/restaurant/src/main/resources/templates/goods/add.html
@@ -122,7 +122,7 @@
             </div>
             <div class="layui-form-item layui-hide">
                 <input type="button" lay-submit lay-filter="LAY-user-front-submit"
-                       id="LAY-user-front-submit" value="确认">
+                       id="LAY-user-front-submit" value="Confirm">
             </div>
         </form>
     </div>
