--- a/restaurant/src/main/resources/templates/goodscategory/list.html
+++ b/restaurant/src/main/resources/templates/goodscategory/list.html
@@ -98,7 +98,7 @@
                                                 layer.close(index); //关闭弹层
                                             }else {
                                                 layer.alert(result.msg, {
-                                                    title: 'submit result'
+                                                    title: 'Submission Result'
                                                     ,anim: 6
                                                 });
                                             }
@@ -144,7 +144,7 @@
                                                     layer.close(index); //关闭弹层
                                                 }else {
                                                     layer.alert(result.msg, {
-                                                        title: 'submit result'
+                                                        title: 'Submission Result'
                                                         ,anim: 6
                                                     });
                                                 }
@@ -176,7 +176,7 @@
                                             layer.msg('successfully deleted!', {icon: 6});
                                         }else {
                                             layer.alert(result.msg, {
-                                                title: 'Submit result'
+                                                title: 'Submission Result'
                                                 ,anim: 6
                                             });
                                         }
@@ -206,7 +206,7 @@
                                     layer.msg('successfully deleted!', {icon: 6});
                                 }else {
                                     layer.alert(result.msg, {
-                                        title: 'Submit result'
+                                        title: 'Submission Result'
                                         ,anim: 6
                                     });
                                 }
@@ -243,7 +243,7 @@
                                             layer.close(index); //关闭弹层
                                         }else {
                                             layer.alert(result.msg, {
-                                                title: 'Submit result'
+                                                title: 'Submission Result'
                                                 ,anim: 6
                                             });
                                         }
