--- a/restaurant/src/main/resources/templates/member/list.html
+++ b/restaurant/src/main/resources/templates/member/list.html
@@ -185,7 +185,7 @@
                                                 layer.close(index); //关闭弹层
                                             }else {
                                                 layer.alert(result.msg, {
-                                                    title: 'Submit result'
+                                                    title: 'Submission Result'
                                                     ,anim: 6
                                                 });
                                             }
@@ -231,7 +231,7 @@
                                                     layer.close(index); //关闭弹层
                                                 }else {
                                                     layer.alert(result.msg, {
-                                                        title: 'Submit result'
+                                                        title: 'Submission Result'
                                                         ,anim: 6
                                                     });
                                                 }
@@ -263,7 +263,7 @@
                                             layer.msg('Successfully deleted!', {icon: 6});
                                         }else {
                                             layer.alert(result.msg, {
-                                                title: 'Submit result'
+                                                title: 'Submission Result'
                                                 ,anim: 6
                                             });
                                         }
@@ -293,7 +293,7 @@
                                     layer.msg('Suceessfully deleted!', {icon: 6});
                                 }else {
                                     layer.alert(result.msg, {
-                                        title: 'Submit result'
+                                        title: 'Submission Result'
                                         ,anim: 6
                                     });
                                 }
@@ -331,7 +331,7 @@
                                             layer.close(index); //关闭弹层
                                         }else {
                                             layer.alert(result.msg, {
-                                                title: 'Submit result'
+                                                title: 'Submission Result'
                                                 ,anim: 6
                                             });
                                         }
