--- a/restaurant/src/main/resources/templates/order/orderDetail.html
+++ b/restaurant/src/main/resources/templates/order/orderDetail.html
@@ -128,7 +128,7 @@
                                 layer.msg('Sucessfully deleted!', {icon: 1});
                             } else {
                                 layer.alert(result.msg, {
-                                    title: 'Submit result'
+                                    title: 'Submission Result'
                                     , anim: 6
                                 });
                             }
