--- a/restaurant/src/main/resources/templates/user/updatePwd.html
+++ b/restaurant/src/main/resources/templates/user/updatePwd.html
@@ -42,7 +42,7 @@
                 <div class="layui-form-item">
                     <input type="button" class="layui-btn" lay-verType="tips" lay-submit lay-filter="updatePwd"
                            id="component-form-element"
-                           value="确认修改">
+                           value="Confirm Modification">
                     <button type="reset" class="layui-btn layui-btn-primary">Reset</button>
                 </div>
             </form>
@@ -72,7 +72,7 @@
                         layer.msg("The password is changed successfully! The next login will take effect！", {icon: 6});
                     } else {
                         layer.alert(result.msg, {
-                            title: 'Submit result'
+                            title: 'Submission Result'
                             , anim: 5
                         });
                     }
