--- a/restaurant/src/main/resources/templates/cook/deskServingStatus.html
+++ b/restaurant/src/main/resources/templates/cook/deskServingStatus.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>桌位上菜情况表 Table Dish Status</title>
+    <title>Table Dish Status</title>
     <link rel="stylesheet" th:href="@{/layuiadmin/layui/css/layui.css}"
           href="../../static/layuiadmin/layui/css/layui.css"
           media="all"/>
@@ -28,12 +28,12 @@
             </div>
             <div class="layui-inline">
                 <div class="layui-input-inline" style="width: 170px">
-                    <label class="layui-form-label" style="width:60px;padding: 9px 0px">完成状态 Status</label>
+                    <label class="layui-form-label" style="width:60px;padding: 9px 0px">Status</label>
                     <div class="layui-input-block" style="margin-left:70px;">
                         <select name="finishStatus">
-                            <option value="">不限 N/A</option>
-                            <option value="0">未完成 Not Finish</option>
-                            <option value="1">已完成 Finish</option>
+                            <option value="">N/A</option>
+                            <option value="0">Not Finish</option>
+                            <option value="1">Finish</option>
                         </select>
                     </div>
                 </div>
@@ -58,11 +58,11 @@
             {{#
             if(d.payStatus==0){
             }}
-            <div style="color: #FF1744;">未付款 Not Pay</div>
+            <div style="color: #FF1744;">Not Pay</div>
             {{#
             }else{
             }}
-            <div style="color:#5FB878;">已付款 Paid</div>
+            <div style="color:#5FB878;">Paid</div>
             {{#
             }
             }}
@@ -71,11 +71,11 @@
             {{#
             if(d.finishStatus==0){
             }}
-            <div style="color: #FF1744;">未完成 Not Finish </div>
+            <div style="color: #FF1744;">Not Finish </div>
             {{#
             }else{
             }}
-            <div style="color:#5FB878;">已完成 Finish</div>
+            <div style="color:#5FB878;">Finish</div>
             {{#
             }
             }}
@@ -116,7 +116,7 @@
                 statusCode: 200
             }
             , limits: [2, 5, 10, 20, 30]
-            , title: '桌位上菜情况表'
+            , title: 'Table of desk status'
             , page: true //开启分页
             , even: true//开启背景隔行
             , height: 500
@@ -124,13 +124,13 @@
             , toolbar: '#test-table-toolbar-toolbarDemo' //开启工具栏，此处显示默认图标，可以自定义模板，详见文档
             , cols: [[ //表头
                 , {field: 'orderId', title: 'ID', align: 'center', cellMinWidth: 70, sort: true, fixed: 'left', sort: true, hide: true}
-                , {field: 'deskCode', title: '桌号 Table No.', align: 'center', cellMinWidth: 120,sort:true}
-                , {field: 'peopleNum', title: '人数 People', align: 'center', cellMinWidth: 120}
-                , {field: 'payStatus', title: '付款状态 Pay Status', align: 'center', cellMinWidth:120, templet: "#payStatus_templet"}
-                , {field: 'finishStatus', title: '上菜完成状态 Dish Status', align: 'center', cellMinWidth: 160, templet: "#finishStatus_templet"}
-                , {field: 'totalPrice', title: '总金额 Total Prices', align: 'center', cellMinWidth: 140, sort: true,templet:'<div>{{d.totalPrice}}元</div>'}
-                , {field: 'createTime', title: '创建时间 Creating Date', cellMinWidth: 170,sort: true,templet:'<div>{{d.createTime}}</div>'}
-                , {field: 'modifyTime', title: '修改时间 Editing Date', cellMinWidth: 170,sort: true,templet:'#modifyTime_templet'}
+                , {field: 'deskCode', title: 'Table No.', align: 'center', cellMinWidth: 120,sort:true}
+                , {field: 'peopleNum', title: 'Number of People', align: 'center', cellMinWidth: 120}
+                , {field: 'payStatus', title: 'Pay Status', align: 'center', cellMinWidth:120, templet: "#payStatus_templet"}
+                , {field: 'finishStatus', title: 'Dish Status', align: 'center', cellMinWidth: 160, templet: "#finishStatus_templet"}
+                , {field: 'totalPrice', title: 'Total Prices', align: 'center', cellMinWidth: 140, sort: true,templet:'<div>${{d.totalPrice}}</div>'}
+                , {field: 'createTime', title: 'Creating Time', cellMinWidth: 170,sort: true,templet:'<div>{{d.createTime}}</div>'}
+                , {field: 'modifyTime', title: 'Editing Time', cellMinWidth: 170,sort: true,templet:'#modifyTime_templet'}
                 , {fixed: 'right', title: "工具栏 Toolbar",align:'center', cellMinWidth: 220, toolbar: '#barDemo'}
             ]]
         });
@@ -143,7 +143,7 @@
                 var url = "/restaurant/service/ssd.html/" + data.orderId;
                 layer.open({
                     type: 2
-                    , title: '详细情况'
+                    , title: 'Details'
                     , content: url
                     , maxmin: true
                     , anim: 1
