--- a/restaurant/src/main/resources/templates/desk/list.html
+++ b/restaurant/src/main/resources/templates/desk/list.html
@@ -139,19 +139,19 @@
                     statusCode: 200
                 }
                 , limits: [5, 10, 20, 30]
-                , title: '菜品列表'
+                , title: 'Food List'
                 , page: true //开启分页
                 , even: true//开启背景隔行
                 , toolbar: '#test-table-toolbar-toolbarDemo' //开启工具栏，此处显示默认图标，可以自定义模板，详见文档
                 , cols: [[ //表头
                     {type: 'checkbox', fixed: 'left'}
                     , {field: 'deskId', title: 'ID', cellMinWidth: 60, sort: true, fixed: 'left',hide:true,align:'center'}
-                    , {field: 'deskCode', title: '桌位编号 Table No.', cellMinWidth: 150, sort: true,align:'center'}
-                    , {field: 'peopleCount', title: '座位人数 People',align:'center',sort:true, cellMinWidth: 100,templet:'<div>{{d.peopleCount}}人</div>'}
-                    , {field: 'idleStatus', title: '桌位状态 Status',align:'center', cellMinWidth:120, templet:'#idleStatus'}
-                    , {field: 'createTime', title: '创建时间 Creating Date',align:'center', cellMinWidth: 170,sort: true}
-                    , {field: 'modifyTime', title: '修改时间 Editing Date',align:'center', cellMinWidth: 170,sort: true}
-                    , {fixed: 'right',align:'center', title: "工具栏 Toolbar", cellMinWidth: 180, toolbar: '#barDemo'}
+                    , {field: 'deskCode', title: 'Table No.', cellMinWidth: 150, sort: true,align:'center'}
+                    , {field: 'peopleCount', title: 'Number of People',align:'center',sort:true, cellMinWidth: 100,templet:'<div>{{d.peopleCount}}</div>'}
+                    , {field: 'idleStatus', title: 'Status',align:'center', cellMinWidth:120, templet:'#idleStatus'}
+                    , {field: 'createTime', title: 'Creating Date',align:'center', cellMinWidth: 170,sort: true}
+                    , {field: 'modifyTime', title: 'Editing Date',align:'center', cellMinWidth: 170,sort: true}
+                    , {fixed: 'right',align:'center', title: "Toolbar", cellMinWidth: 180, toolbar: '#barDemo'}
                 ]]
             });
 
@@ -163,11 +163,11 @@
                     case 'add':
                         layer.open({
                             type: 2
-                            ,title: '添加桌位'
+                            ,title: 'Add a desk'
                             ,content: '/restaurant/desk/add.html'
                             ,maxmin: true
                             ,area: ['460px', '305px']
-                            ,btn: ['确定', '取消']
+                            ,btn: ['Confirm', 'Cancel']
                             ,yes: function(index, layero){
                                 var iframeWindow = window['layui-layer-iframe'+ index]
                                     //该id是窗口打开html页面中表单提交按钮的id
@@ -188,13 +188,13 @@
                                                 layer.close(index); //关闭弹层
                                             }else {
                                                 layer.alert(result.msg, {
-                                                    title: '提交结果'
+                                                    title: 'Submission Result'
                                                     ,anim: 6
                                                 });
                                             }
                                         },
                                         error: function (result, type) {
-                                            layer.msg('添加失败！', {icon: 2, time: 1000});
+                                            layer.msg('Add failed', {icon: 2, time: 1000});
                                         }
                                     });
                                 });
@@ -204,19 +204,19 @@
                         break;
                     case 'update':
                         if (data.length === 0) {
-                            layer.msg('请选择一行');
+                            layer.msg('Please select one row');
                         } else if (data.length > 1) {
-                            layer.msg('只能同时编辑一个');
+                            layer.msg('Only one can be edited at same time');
                         } else {
                             var deskId = checkStatus.data[0].deskId;
                             var url = '/restaurant/desk/edit.html/'+deskId;
                             layer.open({
                                 type: 2
-                                ,title: '编辑桌位'
+                                ,title: 'Edit Desk'
                                 ,content:url
                                 ,maxmin: true
                                 ,area: ['460px', '305px']
-                                ,btn: ['确定', '取消']
+                                ,btn: ['Confirm', 'Cancel']
                                 ,yes: function(index, layero){
                                     var iframeWindow = window['layui-layer-iframe'+ index]
                                         ,submitID = 'LAY-user-front-submit'
@@ -237,7 +237,7 @@
                                                     layer.close(index); //关闭弹层
                                                 }else {
                                                     layer.alert(result.msg, {
-                                                        title: '提交结果'
+                                                        title: 'Submission Result'
                                                         ,anim: 6
                                                     });
                                                 }
@@ -251,9 +251,9 @@
                         break;
                     case 'delete':
                         if (data.length === 0) {
-                            layer.msg('请选择一行');
+                            layer.msg('Please select one row');
                         } else {
-                            layer.confirm('确定删除?', function(){
+                            layer.confirm('Confirm deleting?', function(){
                                 var ids = '';
                                 for (var i = 0; i < data.length; i++) {
                                     ids += data[i].deskId + ",";
@@ -266,16 +266,16 @@
                                     success: function(result) {
                                         if(result.code == 200) {
                                             table.reload('tableList'); //数据刷新
-                                            layer.msg('删除成功!', {icon: 6});
+                                            layer.msg('Delete successfully', {icon: 6});
                                         }else {
                                             layer.alert(result.msg, {
-                                                title: '提交结果'
+                                                title: 'Submission Result'
                                                 ,anim: 6
                                             });
                                         }
                                     },
                                     error: function (result, type) {
-                                        layer.msg('删除失败！', {icon: 2, time: 1000});
+                                        layer.msg('Delete failed!', {icon: 2, time: 1000});
                                     }
                                 });
                             });
@@ -289,7 +289,7 @@
                 var data = obj.data //获得当前行数据
                     , layEvent = obj.event; //获得 lay-event 对应的值
                 if (layEvent === 'del') {
-                    layer.confirm('确定要删除【'+data.deskCode+'】?', function (index) {
+                    layer.confirm('Confirm to delete ['+data.deskCode+']?', function (index) {
                         $.ajax({
                             url: "/restaurant/desk/del.do",
                             type: "post",
@@ -298,10 +298,10 @@
                             success: function(result) {
                                 if(result.code == 200) {
                                     obj.del(); //删除对应行（tr）的DOM结构
-                                    layer.msg('删除成功!', {icon: 6});
+                                    layer.msg('Delete Successfully!', {icon: 6});
                                 }else {
                                     layer.alert(result.msg, {
-                                        title: '提交结果'
+                                        title: 'Submission Result'
                                         ,anim: 6
                                     });
                                 }
@@ -314,11 +314,11 @@
                     var url = '/restaurant/desk/edit.html/'+data.deskId;
                     layer.open({
                         type: 2
-                        ,title: '编辑桌位'
+                        ,title: 'Edit Desk'
                         ,content:url
                         ,maxmin: true
                         ,area: ['460px', '305px']
-                        ,btn: ['确定', '取消']
+                        ,btn: ['Confirm', 'Cancel']
                         ,yes: function(index, layero){
                             var iframeWindow = window['layui-layer-iframe'+ index]
                                 ,submitID = 'LAY-user-front-submit'
@@ -339,7 +339,7 @@
                                             layer.close(index); //关闭弹层
                                         }else {
                                             layer.alert(result.msg, {
-                                                title: '提交结果'
+                                                title: 'Submission Result'
                                                 ,anim: 6
                                             });
                                         }
