--- a/restaurant/src/main/resources/templates/goods/list.html
+++ b/restaurant/src/main/resources/templates/goods/list.html
@@ -214,7 +214,7 @@
                             ,content: '/restaurant/goods/add.html'
                             ,maxmin: true
                             ,area: ['800px', '565px']
-                            ,btn: ['确定', '取消']
+                            ,btn: ['Confirm', 'Cancel']
                             ,yes: function(index, layero){
                                 var iframeWindow = window['layui-layer-iframe'+ index]
                                     //该id是窗口打开html页面中表单提交按钮的id
@@ -235,7 +235,7 @@
                                                 layer.close(index); //关闭弹层
                                             }else {
                                                 layer.alert(result.msg, {
-                                                    title: '提交结果'
+                                                    title: 'Submission Result'
                                                     ,anim: 6
                                                 });
                                             }
@@ -263,7 +263,7 @@
                                 ,content:url
                                 ,maxmin: true
                                 ,area: ['800px', '565px']
-                                ,btn: ['确定', '取消']
+                                ,btn: ['Confirm', 'Cancel']
                                 ,yes: function(index, layero){
                                     var iframeWindow = window['layui-layer-iframe'+ index]
                                         ,submitID = 'LAY-user-front-submit'
@@ -284,7 +284,7 @@
                                                     layer.close(index); //关闭弹层
                                                 }else {
                                                     layer.alert(result.msg, {
-                                                        title: '提交结果'
+                                                        title: 'Submission Result'
                                                         ,anim: 6
                                                     });
                                                 }
@@ -300,7 +300,7 @@
                         if (data.length === 0) {
                             layer.msg('请选择一行');
                         } else {
-                            layer.confirm('确定删除?', function(){
+                            layer.confirm('Confirm deleting?', function(){
                                 var ids = '';
                                 for (var i = 0; i < data.length; i++) {
                                     ids += data[i].goodsId + ",";
@@ -313,10 +313,10 @@
                                     success: function(result) {
                                         if(result.code == 200) {
                                             table.reload('tableList'); //数据刷新
-                                            layer.msg('删除成功!', {icon: 6});
+                                            layer.msg('Delete Successfully!', {icon: 6});
                                         }else {
                                             layer.alert(result.msg, {
-                                                title: '提交结果'
+                                                title: 'Submission Result'
                                                 ,anim: 6
                                             });
                                         }
@@ -336,7 +336,7 @@
                 var data = obj.data //获得当前行数据
                     , layEvent = obj.event; //获得 lay-event 对应的值
                 if (layEvent === 'del') {
-                    layer.confirm('确定要删除【'+data.goodsName+'】?', function (index) {
+                    layer.confirm('Confirm deleting【'+data.goodsName+'】?', function (index) {
                         $.ajax({
                             url: "/restaurant/goods/del.do",
                             type: "post",
@@ -345,10 +345,10 @@
                             success: function(result) {
                                 if(result.code == 200) {
                                     obj.del(); //删除对应行（tr）的DOM结构
-                                    layer.msg('删除成功!', {icon: 6});
+                                    layer.msg('Delete Successfully!', {icon: 6});
                                 }else {
                                     layer.alert(result.msg, {
-                                        title: '提交结果'
+                                        title: 'Submission Result'
                                         ,anim: 6
                                     });
                                 }
@@ -365,7 +365,7 @@
                         ,content:url
                         ,maxmin: true
                         ,area: ['800px', '565px']
-                        ,btn: ['确定', '取消']
+                        ,btn: ['Confirm', 'Cancel']
                         ,yes: function(index, layero){
                             var iframeWindow = window['layui-layer-iframe'+ index]
                                 ,submitID = 'LAY-user-front-submit'
@@ -386,7 +386,7 @@
                                             layer.close(index); //关闭弹层
                                         }else {
                                             layer.alert(result.msg, {
-                                                title: '提交结果'
+                                                title: 'Submission Result'
                                                 ,anim: 6
                                             });
                                         }
