--- a/restaurant/src/main/resources/templates/goodscategory/add.html
+++ b/restaurant/src/main/resources/templates/goodscategory/add.html
@@ -28,7 +28,7 @@
             </div>
             <div class="layui-form-item layui-hide">
                 <input type="button" lay-submit lay-filter="LAY-user-front-submit" id="LAY-user-front-submit"
-                       value="确认">
+                       value="Confirm">
             </div>
         </form>
     </div>
