--- a/restaurant/src/main/resources/templates/membercategory/list.html
+++ b/restaurant/src/main/resources/templates/membercategory/list.html
@@ -102,7 +102,7 @@
                                                 layer.close(index); //关闭弹层
                                             }else {
                                                 layer.alert(result.msg, {
-                                                    title: 'Submit result'
+                                                    title: 'Submission Result'
                                                     ,anim: 6
                                                 });
                                             }
@@ -148,7 +148,7 @@
                                                     layer.close(index); //关闭弹层
                                                 }else {
                                                     layer.alert(result.msg, {
-                                                        title: 'Submit result'
+                                                        title: 'Submission Result'
                                                         ,anim: 6
                                                     });
                                                 }
@@ -180,7 +180,7 @@
                                             layer.msg('Successfully deleted!', {icon: 6});
                                         }else {
                                             layer.alert(result.msg, {
-                                                title: 'Submit result'
+                                                title: 'Submission Result'
                                                 ,anim: 6
                                             });
                                         }
@@ -210,7 +210,7 @@
                                     layer.msg('Successfully deleted!', {icon: 6});
                                 }else {
                                     layer.alert(result.msg, {
-                                        title: 'Submit result'
+                                        title: 'Submission Result'
                                         ,anim: 6
                                     });
                                 }
@@ -248,7 +248,7 @@
                                             layer.close(index); //关闭弹层
                                         }else {
                                             layer.alert(result.msg, {
-                                                title: 'Submit result'
+                                                title: 'Submission Result'
                                                 ,anim: 6
                                             });
                                         }
