--- a/restaurant/src/main/resources/templates/user/userList.html
+++ b/restaurant/src/main/resources/templates/user/userList.html
@@ -171,7 +171,7 @@
                                                 layer.close(index); //关闭弹层
                                             }else {
                                                 layer.alert(result.msg, {
-                                                    title: 'Submit result'
+                                                    title: 'Submission Result'
                                                     ,anim: 6
                                                 });
                                             }
@@ -217,7 +217,7 @@
                                                     layer.close(index); //关闭弹层
                                                 }else {
                                                     layer.alert(result.msg, {
-                                                        title: 'Submit result'
+                                                        title: 'Submission Result'
                                                         ,anim: 6
                                                     });
                                                 }
@@ -249,7 +249,7 @@
                                             layer.msg('Sucessfully deleted!', {icon: 6});
                                         }else {
                                             layer.alert(result.msg, {
-                                                title: 'Submit result'
+                                                title: 'Submission Result'
                                                 ,anim: 6
                                             });
                                         }
@@ -276,7 +276,7 @@
                                     layer.msg('Sucessfully reset!', {icon: 6});
                                 }else {
                                     layer.alert(result.msg, {
-                                        title: 'Submit result'
+                                        title: 'Submission Result'
                                         ,anim: 6
                                     });
                                 }
@@ -298,7 +298,7 @@
                                     layer.msg('Sucessfully deleted!', {icon: 6});
                                 }else {
                                     layer.alert(result.msg, {
-                                        title: 'Submit result'
+                                        title: 'Submission Result'
                                         ,anim: 6
                                     });
                                 }
@@ -336,7 +336,7 @@
                                             layer.close(index); //关闭弹层
                                         }else {
                                             layer.alert(result.msg, {
-                                                title: 'Submit result'
+                                                title: 'Submission Result'
                                                 ,anim: 6
                                             });
                                         }
