--- a/restaurant/src/main/resources/templates/login/login.html
+++ b/restaurant/src/main/resources/templates/login/login.html
@@ -20,10 +20,10 @@
 				</fieldset>
 				<div class="layui-form" action="" method="post">
 					<div class="layui-form-item">
-						<input type="text" id="loginCode" lay-verify="required|account" lay-verType="tips" maxlength="20" placeholder="请输入账号" autocomplete="off" autofocus="autofocus" class="layui-input"/>
+						<input type="text" id="loginCode" lay-verify="required|account" lay-verType="tips" maxlength="20" placeholder="Please enter account" autocomplete="off" autofocus="autofocus" class="layui-input"/>
 					</div>
 					<div class="layui-form-item">
-						<input type="password" id="password" lay-verType="tips" lay-verify="pwd" maxlength="20" placeholder="请输入密码" autocomplete="off" class="layui-input"/>
+						<input type="password" id="password" lay-verType="tips" lay-verify="pwd" maxlength="20" placeholder="Please enter password" autocomplete="off" class="layui-input"/>
 					</div>
 					<!--<div class="layui-form-item form_code">
 						<input type="text" id="code" lay-verify="required|code" maxlength="6" placeholder="请输入验证码" autocomplete="off" class="layui-input">
@@ -33,10 +33,6 @@
 					<strong class="text-white">Forgot password？ <a href="#" id="click" style="color: cornflowerblue;">Find my password&raquo;</a></strong>
 				</div>
 				<hr class="layui-bg-gray"/>
-				<div class="layui-footer text-white">
-					<!-- 底部固定区域 -->
-					&copy;2018-2019 泸职院版权所有
-				</div>
 			</div>
 		</div>
 		<script type="text/javascript" th:src="@{/js/jquery.min.js}"  src="../../static/js/jquery.min.js"></script>
